Рабочая версия №1 демонстрационного приложения

--- a/src/java/resource/messages.properties
+++ b/src/java/resource/messages.properties
@@ -1,5 +1,5 @@
 ## Messages ##
 ##############
 message.loginerror = Incorrect login or passwor.
-message.mullpage = Page not found. Business logic error.
+message.nullpage = Page not found. Business logic error.
 message.wrongaction = : command not found or wrong!
